# tp1

./: CMakeLists.txt  LectorDeHtml(recursivo).cpp  LectorDeHtml.cpp  LectorDeHtml.h  Lista.cpp  Lista.h  Nodo.cpp  Pila.cpp  Pila.h  archivito.html  archivo.html  archivo0.html  archivo1.html  archivo2.html  d.cpp  main.cpp  pagina.html  primer parcial.cpp  primerparcial.cpp  tokenhtml.cpp
tp1-master/: Lista.cpp  Lista.h  Nodo.h  Pila.cpp  Pila.h  README.md  main.cpp
